# OSG-PolygonSelect

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Apps/: CMakeLists.txt
Apps/PolygonSelect/: CMakeLists.txt  PolygonSelectHandler.cpp  PolygonSelectHandler.h  main.cpp
